fluxcd/apps/base/linkstack/statefulset-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: linkstack-db
spec:
  revisionHistoryLimit: 5
  serviceName: linkstack-db
  replicas: 1
  selector:
    matchLabels:
      app: linkstack-db
  template:
    metadata:
      labels:
        app: linkstack-db
    spec:
      serviceAccountName: linkstack-db
      containers:
        - name: mariadb
          image: PLACEHOLDER_IMAGE
          resources:
            requests:
              cpu: PLACEHOLDER_CPU_REQUEST
              memory: PLACEHOLDER_MEMORY_REQUEST
            limits:
              cpu: PLACEHOLDER_CPU_LIMIT
              memory: PLACEHOLDER_MEMORY_LIMIT
          volumeMounts:
            - name: PLACEHOLDER_NAMESPACE-linkstack-mariadb
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: PLACEHOLDER_NAMESPACE-linkstack-mariadb
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: PLACEHOLDER_STORAGE_CLASS
        resources:
          requests:
            storage: PLACEHOLDER_DB_STORAGE
