fluxcd/apps/base/linkstack/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkstack-db
spec:
  type: ClusterIP
  selector:
    app: linkstack-db
  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
    protocol: TCP
