fluxcd/apps/base/linkstack/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkstack
spec:
  parentRefs:
  - name: PLACEHOLDER_GATEWAY
    namespace: PLACEHOLDER_GATEWAY_NAMESPACE
  hostnames:
  - PLACEHOLDER_HOSTNAME
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: linkstack
      port: PLACEHOLDER_HTTPS_PORT
